--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "firebase": "8.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "5.1",
+    "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.1",
     "sass": "^1.79.3",
